// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider drag button 1`] = `
<div class="o-slider o-slider--disabled">
  <div class="o-slider__bar" style="width: 50%;">
    <div class="o-slider__bar__wrapper">
      <div class="o-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`Slider drag button 2`] = `
<div class="o-slider">
  <div class="o-slider__bar" style="width: 100%;">
    <div class="o-slider__bar__wrapper">
      <div class="o-slider__button"></div>
    </div>
  </div>
</div>
`;
